# rust-examples

./: .gitignore  README.MD
nucleo-G070/: Cargo.toml  Embed.toml  README.md  memory.x
nucleo-G070/.cargo/: config
nucleo-G070/examples/: blink.rs  i2c_master.rs  i2c_slave.rs  input.rs  motors_pwm.rs  motors_pwm_interupt.rs  nb_i2c_master_simple.rs  neopixel.rs  neopixel5bits.rs  rtic_i2c_master_simple.rs  rtic_i2c_slave.rs  test_block_i2c_master.rs  test_block_i2c_slave.rs  test_rtic_i2c_master.rs  test_rtic_i2c_slave.rs
nucleo-G070/lib/: lib.rs
